tests/neg-custom-args/captures/i25758a.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i25758a/Test_2.scala:6:15 --------------------------------
6 |    assertPure(() => IO.io.println("hello"))  // error, as expected
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |               Found:    () ->{test.IO.io} Unit
  |               Required: () -> Unit
  |
  |               Note that capability `test.IO.io` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i25758a/Test_2.scala:9:16 --------------------------------
 9 |    assertPure: () =>  // error
   |                ^
   |                Found:    () ->{test.IO.io} Unit
   |                Required: () -> Unit
   |
   |                Note that capability `test.IO.io` cannot flow into capture set {}.
   |
10 |      test()
   |
   | longer explanation available when compiling with `-explain`
